# book_collector

./: .env.dev  .gitignore  .mypy.ini  package-lock.json  pyproject.toml
frontend/: angular.json  eslint.config.mjs  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.routes.ts  auth-interceptor-interceptor.ts
frontend/src/app/login/login-component/: login-component.html  login-component.ts
frontend/src/app/services/: user-service.ts
frontend/src/app/utils/: generic-success-response.ts
frontend/src/environments/: environment.development.ts  environment.ts  environment_interface.ts
server/: __init__.py
server/api/: dependencies.py  main.py  security.py
server/api/routes/: collection.py
server/api/routes/auth/: auth_router.py
server/api/routes/books/: books_router.py
server/api/routes/user/: user_router.py
server/api/utils/: generic_success_response.py
server/controller/: book_controller.py  shared_config.py  user_controller.py
server/controller/db/: db_provider.py
server/controller/exceptions/collections/: collection_not_found_exception.py  collection_not_owned_exception.py
server/controller/exceptions/users/: incorrect_password_exception.py
server/controller/open_library_fetch/: open_library_fetcher.py  openlibrary_book.py
server/controller/open_library_fetch/exceptions/: invalid_openlibrary_response.py
server/model/: author.py  book.py  book_edition.py  collection.py  user.py
server/model/relationships/: book_author_relationship.py  book_collection_relationship.py  book_user_relationship.py
(+7 files in other folders)
